plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.6'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.adjh'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVer', "2023.0.3")
}


dependencies {

    // Spring Boot Starter
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation "org.springframework.boot:spring-boot-configuration-processor"

    // Spring Cloud
    implementation "org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3"
    implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'
    implementation 'io.github.openfeign:feign-jackson:13.5'


    // OpenSource
    compileOnly 'org.projectlombok:lombok'
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVer}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
